--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
-                  >Beranda utama</a
+                  >Beranda</a
                 >
               </li>
               <li class="nav-item">
